<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2016 The TensorFlow Authors. All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="app_name">도치약국</string>

    <!-- Main Activity/Fragment -->
    <string name="empty_view_text">버튼을 눌러서 알람을 추가하세요!</string>
    <string name="empty_view_text2">즐겨찾는 알약을 추가해두세요!</string>

    <!-- Edit Alarm Activity/Fragment -->
    <string name="time">복용시간</string>
    <string name="label">약물 이름</string>
    <string name="days">날짜</string>
    <string name="edit_alarm">알림 수정</string>
    <string name="add_alarm">알림 추가</string>
    <string name="add_label_hint">약물 이름을 입력해주세요</string>
    <string name="update_complete">변경사항이 저장되었습니다</string>
    <string name="update_failed">업데이트에 실패하였습니다</string>
    <string name="delete_complete">알림이 삭제되었습니다</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_dialog_title">알림 삭제</string>
    <string name="delete_dialog_content">해당 알림을 삭제할까요?</string>
    <string name="yes">네</string>
    <string name="no">아니요</string>

    <!-- Edit Alarm Menu -->
    <string name="action_save">저장</string>
    <string name="action_delete">삭제</string>

    <!-- Alarm Landing Page Activity/Fragment -->
    <string name="launch_main_activity">Launch Main Activity</string>
    <string name="dismiss">Dismiss</string>

    <!-- Days -->
    <string name="monday">월요일</string>
    <string name="tuesday">화요일</string>
    <string name="wednesday">수요일</string>
    <string name="thursday">목요일</string>
    <string name="friday">금요일</string>
    <string name="saturday">토요일</string>
    <string name="sunday">일요일</string>

    <!-- Notification -->
    <string name="channel_name">Simple Alarms</string>
    <string name="title_activity_pill_detail">상세정보</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_pill_list">알약리스트</string>
    <string name="title_activity_text_search">텍스트로 검색</string>

    <string name="count">복용횟수</string>
    <string-array name="count_array">
        <item>1회</item>
        <item>2회</item>
        <item>3회</item>
        <item>4회</item>
        <item>5회</item>
    </string-array>
</resources>
